# learn-rust

./: Cargo.toml  README.md  tasks.db
01_dasar_rust/: Cargo.toml  README.md
01_dasar_rust/src/: main.rs
02_ownership/: Cargo.toml  README.md
02_ownership/src/: main.rs
03_structs_enums/: Cargo.toml  README.md
03_structs_enums/src/: main.rs
04_intermediate/: Cargo.toml  README.md
04_intermediate/src/: main.rs
05_modern_rust/: Cargo.toml  README.md
05_modern_rust/src/: main.rs
06_crud_app/: Cargo.toml  README.md
06_crud_app/src/: main.rs
