[package]
name = "modul_06_crud_app"
version = "0.1.0"
default-run = "modul_06_crud_app"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tower-http = { version = "0.5", features = ["trace"] }
